リンクのコピー機能実装、各セクションのタイトルにアイコンを付与、ProfileCardに利用するアイコンを白抜き処理してheaderのものと区別

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -145,6 +145,9 @@ section {
     margin: 30px 40px;
     padding: 30px;
     /* height: 300px; */
+} section[id] {
+    /* ヘッダーの高さ(90px) + 上部の余白(30px) + α */
+    scroll-margin-top: 150px;
 }
 
 .section-profile {
