--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -46,8 +46,11 @@ const { title, date, description, slug, thumbnail, isCurrent } = Astro.props; //
         gap:1rem;
         align-items: center;
         justify-content: space-between;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.20);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.20);
         transition: box-shadow 0.2s ease; /* 影の変化も滑らかに */
+        font-family: "M PLUS Rounded 1c", sans-serif;
+        font-weight: 600;
+        font-style: normal;
     }
 
     /* .card-link:hover .card {
