--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,14 +74,18 @@ const hasMorePosts = posts.length > 6;
                         <i class="fas fa-user"></i>
                         <h2 class="section-title-sentence">Profile</h2>
                     </div>
-                    <a href="/"><i class="fa-solid fa-expand"></i></a>
                 </div>
                 <div class="profile-cards-container">
                     <!-- 作成したコンポーネントを呼び出し、propsを渡す -->
                     <ProfileCard text="大阪府在住" iconClass="fa-solid fa-location-dot" />
-                    <ProfileCard text="ITパスポート合格" iconClass="fa-solid fa-trophy" />
+                    <ProfileCard text="応用情報技術者試験合格" iconClass="fa-solid fa-trophy" />
                     <ProfileCard text="情報工学系の学部3年生" iconClass="fa-solid fa-graduation-cap" />
                     <ProfileCard text="webデザイン" iconClass="fa-solid fa-address-card" />
+                </div>
+                <div class="section-footer">
+                    <div class="section-footer-right">
+                        <a href="/profile"><button>show-more <i class="fa-solid fa-arrow-right"></i></button></a>
+                    </div>
                 </div>
             </section>
             <section class="section-blog" id="section-blog">
@@ -90,7 +94,6 @@ const hasMorePosts = posts.length > 6;
                         <i class="fas fa-pen-nib"></i>
                         <h2 class="section-title-sentence">Blog</h2>
                     </div>
-                    <a href="/"><i class="fa-solid fa-expand"></i></a>
                 </div>
                 <div class="post-cards-container">
                     {limitedPosts.map((post: { data: { pubDate: any; title: unknown; description: unknown; thumbnail: unknown; }; slug: unknown; }) => {
@@ -107,6 +110,11 @@ const hasMorePosts = posts.length > 6;
                         );
                     })}
                 </div>
+                <div class="section-footer">
+                    <div class="section-footer-right">
+                        <a href="/profile"><button>show-more <i class="fa-solid fa-arrow-right"></i></button></a>
+                    </div>
+                </div>
             </section>
             <section class="section-works" id="section-works">
                 <div class="section-title">
@@ -114,7 +122,12 @@ const hasMorePosts = posts.length > 6;
                         <i class="fa-solid fa-cube"></i>
                         <h2 class="section-title-sentence">Works</h2>
                     </div>
-                    <a href="/"><i class="fa-solid fa-expand"></i></a>
+                </div>
+                <div class="section-footer">
+                    <div class="section-footer-right">
+                        <a href="/profile"><button>show-more <i class="fa-solid fa-arrow-right"></i></button></a>
+                    </div>
+                </div>
             </section>
         </main>
 
