--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,9 +47,9 @@ const hasMorePosts = posts.length > 6;
                     <a href="/" class="header-icon-link" aria-label="ホーム"><i class="fa-solid fa-house"></i></a>
                 </div>
                 <div class="header-right">
-                    <a href="/#section-profile" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
-                    <a href="/#section-blog" class="header-icon-link" aria-label="ブログ"><i class="fas fa-pen-nib"></i></a>
-                    <a href="/#section-works" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
+                    <a href="/#profile-section" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
+                    <a href="/#blog-section" class="header-icon-link" aria-label="ブログ"><i class="fas fa-pen-nib"></i></a>
+                    <a href="/#works-section" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
                     <a href="/" class="header-icon-link share" aria-label="共有"><i class="fa-solid fa-link"></i></a>
                 </div>
         </header>
@@ -60,15 +60,15 @@ const hasMorePosts = posts.length > 6;
 
         <nav class="header-overlay-nav" id="overlay-nav">
             <div class="nav-list">
-                <a href="/#section-profile" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
-                <a href="/#section-blog" class="header-icon-link" aria-label="ブログ"><i class="fas fa-pen-nib"></i></a>
-                <a href="/#section-works" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
+                <a href="/#profile-section" class="header-icon-link" aria-label="プロフィール"><i class="fas fa-user"></i></a>
+                <a href="/#blog-section" class="header-icon-link" aria-label="ブログ"><i class="fas fa-pen-nib"></i></a>
+                <a href="/#works-section" class="header-icon-link" aria-label="制作物"><i class="fa-solid fa-cube"></i></a>
                 <a href="/" class="header-icon-link share" aria-label="共有"><i class="fa-solid fa-link"></i></a>
             </div>
         </nav>
 
         <main>
-            <section class="section-profile" id="section-profile">
+            <section class="profile-section" id="profile-section">
                 <div class="section-title">
                     <div class="section-title-left">
                         <i class="fas fa-user"></i>
@@ -88,7 +88,8 @@ const hasMorePosts = posts.length > 6;
                     </div>
                 </div>
             </section>
-            <section class="section-blog" id="section-blog">
+
+            <section class="blog-section" id="blog-section">
                 <div class="section-title">
                     <div class="section-title-left">
                         <i class="fas fa-pen-nib"></i>
@@ -116,7 +117,7 @@ const hasMorePosts = posts.length > 6;
                     </div>
                 </div>
             </section>
-            <section class="section-works" id="section-works">
+            <section class="works-section" id="works-section">
                 <div class="section-title">
                     <div class="section-title-left">
                         <i class="fa-solid fa-cube"></i>
