--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -106,6 +106,11 @@ export async function getStaticPaths() {
                 </div>
             </div>
         </main>
+
+        <button id="page-top-btn" class="page-top-btn" aria-label="ページトップへ戻る">
+            <i class="fa-solid fa-arrow-up"></i>
+        </button>
+
     </body>
     <script src="/scripts/indexScript.js" defer></script>
 </html>
