--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -108,9 +108,10 @@ export async function getStaticPaths() {
         </main>
 
         <button id="page-top-btn" class="page-top-btn" aria-label="ページトップへ戻る">
-            <i class="fa-solid fa-arrow-up"></i>
+            <i class="fa-solid fa-angle-up"></i>
         </button>
 
     </body>
+
     <script src="/scripts/indexScript.js" defer></script>
 </html>
