--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -144,7 +144,7 @@ const hasMorePosts = posts.length > 6;
         </footer>
 
         <button id="page-top-btn" class="page-top-btn" aria-label="ページトップへ戻る">
-            <i class="fa-solid fa-caret-up"></i>
+            <i class="fa-solid fa-angle-up"></i>
         </button>
 
         <script src="/scripts/indexScript.js" defer></script>
