--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -56,7 +56,7 @@ export async function getStaticPaths() {
         <header class="header">
             <div class="header-container">
                 <div class="header-left">
-                    <a href="/index.html">
+                    <a href="/index.html" class="header-icon-link">
                         <button class="home-back-button" aria-label="BackToHome">
                             <i class="fas fa-arrow-left"></i>
                         </button>
