--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,7 +84,7 @@ const hasMorePosts = posts.length > 6;
                 </div>
                 <div class="section-footer">
                     <div class="section-footer-right">
-                        <a href="/profile"><button>show-more <i class="fa-solid fa-arrow-right"></i></button></a>
+                        <a href="/profile"><button><i class="fa-solid fa-angles-right"></i></button></a>
                     </div>
                 </div>
             </section>
@@ -113,7 +113,7 @@ const hasMorePosts = posts.length > 6;
                 </div>
                 <div class="section-footer">
                     <div class="section-footer-right">
-                        <a href={latestPostUrl}><button>show-more <i class="fa-solid fa-arrow-right"></i></button></a>
+                        <a href={latestPostUrl}><button><i class="fa-solid fa-angles-right"></i></button></a>
                     </div>
                 </div>
             </section>
@@ -127,7 +127,7 @@ const hasMorePosts = posts.length > 6;
                 </div>
                 <div class="section-footer">
                     <div class="section-footer-right">
-                        <a href="/"><button>show-more <i class="fa-solid fa-arrow-right"></i></button></a>
+                        <a href="/"><button><i class="fa-solid fa-angles-right"></i></button></a>
                     </div>
                 </div>
             </section>
